examples/bad/type_errors_8-const.in
// from 08-read_only.in

def const_example(a, const b) {
    a++;
    b++; //error
    return 0;
}

def main () {
    const_example(1,2);
    return 0;
}